--- a/CARW/templates/main/Recovery.html
+++ b/CARW/templates/main/Recovery.html
@@ -11,6 +11,12 @@
 </head>
 
 <body>
+    <div id="alerta" class="alerta-campo-vacioPG oculto">
+        Email o Telefono incorrectos!
+    </div>
+    <div id="alerta2" class="alerta-exitoPG oculto">
+        Contraseña actualizada revisa tu Email
+    </div>
     <div class="login-box">
         <img class="avatar" src="{{url_for('static', filename='img/logo.jpg')}}" alt="logo CW">
         <h1>Recuperar Usuario</h1>
