--- a/CARW/templates/main/Pagos.html
+++ b/CARW/templates/main/Pagos.html
@@ -17,6 +17,9 @@
 <div id="alerta6" class="alerta-exitoPG oculto">
     Tuno Generado Con Exito!
 </div>
+<div id="alerta7" class="alerta-campo-vacioPG oculto">
+    Coloque un valor valido!
+</div>
 <div id="pagofisico" class="contenedordepagos oculto">
     <h1 style="text-align: center;">Realize su pago</h1>
     <br>
