--- a/CARW/templates/layout.html
+++ b/CARW/templates/layout.html
@@ -63,6 +63,8 @@
 <script src="{{url_for('static', filename='js/principal.js')}} "></script>
 <script src="{{ url_for('static', filename='js/boostrap_js/bootstrap.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/boostrap_js/bootstrap.bundle.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/xlsx.js') }}"></script>
+<script src="{{ url_for('static', filename='js/print.js') }}"></script>
 </body>
 
 </html>
