--- a/CARW/templates/main/Ajustes.html
+++ b/CARW/templates/main/Ajustes.html
@@ -44,6 +44,11 @@
         <br></br>
         <button type="button" class="btn btn-danger" onclick="eliminarpaquetes()">Eliminar Paquetes Permanentes</button>
     </div>
+    <div class="sombreado" id="ajustes-botones4" style="visibility: hidden;">
+        <button type="button" class="btn btn-primary" onclick="ver_matriculasR()">Mostrar Matriculas Registradas</button>
+        <br></br>
+        <div id="Mvehiculos"></div>
+    </div>
     <div class="sombreado" id="ajvehiculos" style="visibility: hidden;">
         <label for="Rmatricula">Matricula:</label>
         <input id="Rmatricula" type="text" placeholder="SOLO MAYUSCULAS" style="position: relative; left: 10px;">
