--- a/CARW/templates/main/Balances.html
+++ b/CARW/templates/main/Balances.html
@@ -12,7 +12,7 @@
     <br><br>
     <button class="btn btn-info" type="submit" onclick="ver_ventas()">Buscar</button>
     <br><br>
-    <button id="btnImprimir" class="btn btn-secondary" onclick="imprimirTabla()">Imprimir</button>
+    <button id="btnImprimir" class="btn btn-secondary" onclick="imprimirTabla2()">Imprimir</button>
 </div>
 
 <div id="barra-botones3">
