--- a/CARW/templates/main/Balances.html
+++ b/CARW/templates/main/Balances.html
@@ -5,6 +5,12 @@
 <div id="alerta2" class="alerta-exito oculto">
     Por favor, ingrese ambas fechas para comparar!
 </div>
+<div id="alerta3" class="alerta-exito oculto">
+    No hay nada que Guardar!
+</div>
+<div id="alerta4" class="alerta-exito oculto">
+    Guardado con exito!
+</div>
 <div id="barra-botones2">
     <label class="sombreado" for="buscafecha">Coloque La Fecha</label>
     <br><br>
@@ -12,7 +18,9 @@
     <br><br>
     <button class="btn btn-info" type="submit" onclick="ver_ventas()">Buscar</button>
     <br><br>
-    <button id="btnImprimir" class="btn btn-secondary" onclick="imprimirTabla2()">Imprimir</button>
+    <button id="btnImprimir" class="btn btn-secondary" onclick="imprimirTabla2()">Guardar Excel</button>
+    <br><br>
+    <button id="btnImprimir" class="btn btn-secondary" onclick="imprimirTabla()">Imprimir</button>
 </div>
 
 <div id="barra-botones3">
