--- a/CARW/templates/main/Turnos.html
+++ b/CARW/templates/main/Turnos.html
@@ -39,6 +39,7 @@
                 <th>Duracion</th>
                 <th>Hora Fin</th>
                 <th>Estado</th>
+                <th>Botones</th>
             </tr>
         </thead>
         <tbody id="tablaBody2">
