--- a/CARW/static/css/master.css
+++ b/CARW/static/css/master.css
@@ -605,14 +605,15 @@ nav {
 @media print {
     #barra-botones2,
     #barra-botones3,
-    .toggle-btn {
-        display: none;
-    }
-    .url-container {
-        display: none;
-    }
+    .toggle-btn,
+    .url-container,
     #btnImprimir {
         display: none;
+    }
+    #tablaBody3 {
+        width: 100%;
+        height: 100%;
+        overflow: auto;
     }
 }
 
